--- a/index.html
+++ b/index.html
@@ -842,6 +842,17 @@
       </li>
 
       <li class="project-item active" data-filter-item data-category="Content Creation">
+        <a href="https://www.instagram.com/p/DOpi1iHAf-S/" target="_blank">
+          <figure class="project-img">
+            <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+            <img src="./upasana.jpg" alt="Snow Sanchar" loading="lazy">
+          </figure>
+          <h3 class="project-title">Snow Sanchar Production Pvt. Ltd.</h3>
+          <p class="project-category">Media & Content Creator</p>
+        </a>
+      </li>
+
+      <li class="project-item active" data-filter-item data-category="Content Creation">
         <a href="https://www.instagram.com/p/DObPuFIgS_M/" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
