--- a/index.html
+++ b/index.html
@@ -842,10 +842,10 @@
       </li>
 
       <li class="project-item active" data-filter-item data-category="Content Creation">
-        <a href="https://www.instagram.com/p/DOpi1iHAf-S/" target="_blank">
+        <a href="https://www.instagram.com/p/DP1CKvKDI5O/" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./upasana.jpg" alt="Snow Sanchar" loading="lazy">
+            <img src="./assets/images/upasana.jpg" alt="Snow Sanchar" loading="lazy">
           </figure>
           <h3 class="project-title">Snow Sanchar Production Pvt. Ltd.</h3>
           <p class="project-category">Media & Content Creator</p>
