--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
         <a href="https://www.instagram.com/p/DP1CKvKDI5O/" target="_blank">
           <figure class="project-img">
             <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
-            <img src="./assets/images/upasana .jpg" alt="Snow Sanchar" loading="lazy">
+            <img src="./assets/images/Upasana .jpg" alt="Snow Sanchar" loading="lazy">
           </figure>
           <h3 class="project-title">Snow Sanchar Production Pvt. Ltd.</h3>
           <p class="project-category">Media & Content Creator</p>
