--- a/index.html
+++ b/index.html
@@ -874,6 +874,29 @@
         </a>
       </li>
 
+      <li class="project-item active" data-filter-item data-category="Content Creation">
+        <a href="https://www.instagram.com/p/DQHEZpnEtad/" target="_blank">
+          <figure class="project-img">
+            <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+            <img src="./assets/images/12.jpg" alt="Snow Sanchar" loading="lazy">
+          </figure>
+          <h3 class="project-title">Snow Sanchar</h3>
+          <p class="project-category">Media & Content Creator</p>
+        </a>
+      </li>
+
+      <!-- Youtube Projects -->
+      <li class="project-item active" data-filter-item data-category="Content Creation">
+        <a href="https://www.youtube.com/watch?v=nk-0ipJeqfE" target="_blank">
+          <figure class="project-img">
+            <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+            <img src="./assets/images/23.jpg" alt="Bhrikuti" loading="lazy">
+          </figure>
+          <h3 class="project-title">Leo Club of Kathmandu Bhrikuti</h3>
+          <p class="project-category">Content Creator</p>
+        </a>
+      </li>
+
     </ul>
 
   </section>
