--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Upasana Pandey" width="80">
         </figure>
 
         <div class="info-content">
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">upasanap944@gmail.com</a>
+              <a href="mailto:richard@example.com" class="contact-link">upasana.03.pandey@gmail.com</a>
             </div>
 
           </li>
