--- a/index.html
+++ b/index.html
@@ -897,6 +897,17 @@
         </a>
       </li>
 
+      <li class="project-item active" data-filter-item data-category="Content Creation">
+        <a href="https://www.youtube.com/watch?v=gXsouLX5tfY&t=4s" target="_blank">
+          <figure class="project-img">
+            <div class="project-item-icon-box"><ion-icon name="eye-outline"></ion-icon></div>
+            <img src="./assets/images/25.jpg" alt="Bhrikuti" loading="lazy">
+          </figure>
+          <h3 class="project-title">Leo Club of Kathmandu Bhrikuti</h3>
+          <p class="project-category">Content Creator</p>
+        </a>
+      </li>
+
     </ul>
 
   </section>
